--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,5 +41,5 @@ jobs:
       - name: "Docker Pull and Restart Docker"
         run: |
           ssh -t ubuntu@$SERVER_IP -i pem.pem 'docker pull blackyet1/workshopp'
-          ssh -t ubuntu@$SERVER_IP -i pem.pem 'docker stop not-nginx && docker rm not-nginx'
-          ssh -t ubuntu@$SERVER_IP -i pem.pem 'docker run --name not-nginx -p 80:80 -d blackyet1/workshopp'
+          ssh -t ubuntu@$SERVER_IP -i pem.pem 'docker stop nginx && docker rm nginx'
+          ssh -t ubuntu@$SERVER_IP -i pem.pem 'docker run --name nginx -p 80:80 -d blackyet1/workshopp'
